# mysed

./: .dockerignore  .gitignore  ANALYSIS_MAYAN_DOCUMENTS.md  CODE_REVIEW_MAYAN_DOCUMENTS.md  DEPLOY_WORK_GUIDE.md  Dockerfile  ENV_SETUP.md  LDAP_SETUP_GUIDE.md  LOGGING_GUIDE.md  README.md  UNUSED_FUNCTIONS_ANALYSIS.md  USER_SYNC_README.md  api_router.py  check_test_env.py  class_example.py  cleanup_temp_files.py  example_document_review.py  function_example.py  home_page.py  ldap_queries_examples.py  ldap_users.py  main.py  menu.py  models.py  pyproject.toml  set_test_env.sh  test_camunda.py  test_config.py  test_group_fix.py  test_simple.bpmn  test_state_migration.py  test_user_sync.py  theme.py
.github/workflows/: integration-tests.yml
Docker-compose/: ENV_SETUP.md  README.md  docker-compose.yml
app_logging/: LOGGING_GUIDE.md  __init__.py  handlers.py  logger.py
auth/: LDAP_SETUP_GUIDE.md  README_user_sync.me  USER_SYNC_README.md  __init__.py  ldap_auth.py  ldap_structure_diagram.txt  ldap_structure_setup.ldif  middleware.py  session_manager.py  setutp_cron_sync_user.sh  sync_users_from_olap.py  test_sync_users.py  token_storage.py
components/: __init__.py  document_viewer.py  gantt_chart.py  loading_indicator.py  message.py  theme.py
config/: __init__.py  settings.py
logs/: document_hash_cache.db  group_sync_state.json  user_sync_state.json
pages/: deploy_work.py  document_review_page.py  document_signing_page.py  home_page.py  login_page.py  mayan_documents.py  my_processes_page.py  task_assignment_page.py  task_completion_page.py  task_completion_state.py  user_profile.py
scripts/: .env.example  README_CAMUNDA_CLEANUP.md  cleanup_camunda_history.py  cleanup_camunda_history.sh
services/: README_DIRECTORY_SYNC.md  README_EMAIL_SYNC.md  access_types.py  camunda_connector.py  cxamunda_test_class.py  directory_processor.py  directory_watcher.py  document_access_manager.py  document_hash_cache.py  email_client.py  email_processor.py  email_validator.py  mayan_connector.py  pycamunda_test.py  role_manager.py  signature_manager.py  sync_directory.py  sync_email.py  task_create_document.bpmn  task_document_singing.bpmn  task_review_doc_alternative.bpmn  task_review_doc_final.bpmn  task_review_doc_multi_instance.bpmn  task_review_doc_simple.bpmn  task_review_doc_simple.bpmn.back  task_review_doc_with_storage.bpmn  user_sync_manager.py
tests/: README.md  conftest.py  test_email_client.py
utils/: __init__.py  aggrid_locale.py  date_utils.py  security.py  task_utils.py
(+113 files in other folders)
