[project]
name = "nicegui-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aioimaplib>=1.0.1",
    "httpx>=0.27.0",
    "ldap3>=2.9.1",
    "nicegui>=2.23.3",
    "psycopg2-binary>=2.9.10",
    "pycamunda>=0.6.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.0.0",
    "pypdf2>=3.0.1",
    "pytz>=2025.2",
    "reportlab>=4.4.4",
    "requests>=2.32.5",  # Оставляем для обратной совместимости на время миграции
]
