[project]
name = "nicegui-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aioimaplib>=1.0.1",
    "httpx>=0.27.0",
    "ldap3>=2.9.1",
    "nicegui>=2.23.3",
    "psycopg2-binary>=2.9.10",
    "pycamunda>=0.6.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.0.0",
    "pypdf2>=3.0.1",
    "pytz>=2025.2",
    "reportlab>=4.4.4",
    "requests>=2.32.5",  # Оставляем для обратной совместимости на время миграции
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "responses>=0.23.0",
    "playwright>=1.40.0",
    "pytest-timeout>=2.1.0",
]

[tool.pytest.ini_options]
minversion = "7.4"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "integration: интеграционные тесты",
    "unit: unit тесты",
    "e2e: end-to-end тесты",
    "camunda: тесты Camunda интеграции",
    "mayan: тесты Mayan EDMS интеграции",
    "ldap: тесты LDAP интеграции",
    "email: тесты Email обработки",
    "api: тесты API endpoints",
    "workflow: тесты полных workflows",
    "slow: медленные тесты",
    "real_server: требуют реального сервера",
    "real_plugin: требуют установки CryptoPro плагина",
    "timeout: маркер для pytest-timeout",
]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
